--- a/IntentClassification/config.yml
+++ b/IntentClassification/config.yml
@@ -2,23 +2,19 @@
 # https://rasa.com/docs/rasa/nlu/components/
 language: en
 pipeline:
-- name: rasa_custom.custom_spacy_nlp.CustomSpacyNLP
-  model: en_core_web_lg
-  case_sensitive: False
-- name: rasa_custom.custom_spacy_tokenizer.CustomSpacyTokenizer
-- name: rasa_custom.custom_spacy_featuriser.CustomSpacyFeaturizer
-  pooling: mean
-- name: RegexFeaturizer
-- name: LexicalSyntacticFeaturizer
-  features: [["prefix5", "prefix2", "BOS", "EOS", "digit", "pos", "pos2"],["prefix5", "prefix2", "BOS", "EOS", "digit", "pos", "pos2"],["prefix5", "prefix2", "BOS", "EOS", "digit", "pos", "pos2"]]
-- name: CRFEntityExtractor
-- name: rasa_custom.custom_diet_classifier.CustomDIETClassifier
-  epochs: 30
-  embedding_dimension: 40
-  entity_recognition: False
-  number_of_transformer_layers: 2
-- name: ResponseSelector
-  epochs: 100
+  - name: WhitespaceTokenizer
+  - name: RegexFeaturizer
+  - name: LexicalSyntacticFeaturizer
+  - name: CountVectorsFeaturizer
+  - name: CountVectorsFeaturizer
+    analyzer: "char_wb"
+    min_ngram: 1
+    max_ngram: 4
+  - name: DIETClassifier
+    epochs: 100
+  - name: EntitySynonymMapper
+  - name: ResponseSelector
+    epochs: 100
 
 # Configuration for Rasa Core.
 # https://rasa.com/docs/rasa/core/policies/
