remove IBM apikey

--- a/speechToText/speech.cfg
+++ b/speechToText/speech.cfg
@@ -1,4 +1,5 @@
 [auth]
-apikey = kmxQHyl36pPVGvy6SNyuPm7XnuN2Qsu_8FwiFW2pOpKo
+# Please insert your keys here
+apikey = ""
 # Modify region based on where you provisioned your stt instance
 region = us-south
