--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ speechToText/speech.cfg
 EntityLinker/Data/ALFRED/*
 EntityLinker/Spacy_model/*
 EntityLinker/.ipynb_checkpoints/*
+EntityLinker/LSTM_model/.ipynb_checkpoints/*
